[SYNCOPE-1961] Implement MFA